feat: log items GET
